--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
         <title>Todo list</title>
     </head>
     <body>
+        <section id="mySection">
+            <div id="myDiv" class="header">
+                <h2>To Do List</h2>
+
+                <input type="text" id="myInput" placeholder="Text here..." />
+                <span class="addBtn" id="btn">ADD</span>
+            </div>
+
+            <ul id="myUl">
+                <li>Go to the market</li>
+                <li class="checked">Call Mom!!</li>
+                <li>Doctor appointment</li>
+                <li>Car service</li>
+                <li>PMD collection day</li>
+            </ul>
+        </section>
         <script type="module" src="./src/init.js"></script>
     </body>
 </html>
