--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
                 <span class="addBtn" id="btn">ADD</span>
             </div>
 
-            <ul id="myUl">
-                <li>Go to the market</li>
-                <li class="checked">Call Mom!!</li>
-                <li>Doctor appointment</li>
-                <li>Car service</li>
-                <li>PMD collection day</li>
-            </ul>
+            <ul id="myUl"></ul>
         </section>
         <script type="module" src="./src/init.js"></script>
     </body>
